@@ -205,7 +205,7 @@ static int xmp_truncate(const char *path, off_t size)
     return 0;
 }
 
-static int xmp_utimes(const char *path, const struct timespec ts[2])
+static int xmp_utimens(const char *path, const struct timespec ts[2])
 {
     int res;
     struct timeval tv[2];
@@ -357,7 +357,7 @@ static struct fuse_operations xmp_oper = {
     .chmod	= xmp_chmod,
     .chown	= xmp_chown,
     .truncate	= xmp_truncate,
-    .utimes	= xmp_utimes,
+    .utimens	= xmp_utimens,
     .open	= xmp_open,
     .read	= xmp_read,
     .write	= xmp_write,
